WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282930
Wasm JIT plans should store barrier manually since taking a lock doesn't do it
https://bugs.webkit.org/show_bug.cgi?id=282930
Summary
Wasm JIT plans should store barrier manually since taking a lock doesn't do it
Keith Miller
Reported
2024-11-11 06:46:26 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-11 06:46:40 PST
<
rdar://problem/139646476
>
Keith Miller
Comment 2
2024-11-11 06:52:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36487
EWS
Comment 3
2024-11-12 15:27:50 PST
Committed
286506@main
(7412f6569367): <
https://commits.webkit.org/286506@main
> Reviewed commits have been landed. Closing PR #36487 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug