Wasm JIT plans should store barrier manually since taking a lock doesn't do it https://bugs.webkit.org/show_bug.cgi?id=282930 rdar://139646476

Reviewed by Mark Lam.

We were (maybe?) relying on acquiring a lock to store barrier data so changes were
visible to all threads before we register a Callee. I say maybe because most of these
lock acquires follow a different lock's unlock, which has release semantics. Regardless,
we should just do this explicitly for clarity and safety against future changes.

* Source/JavaScriptCore/wasm/WasmBBQPlan.cpp:
(JSC::Wasm::BBQPlan::work):
* Source/JavaScriptCore/wasm/WasmOMGPlan.cpp:
(JSC::Wasm::OMGPlan::work):

Canonical link: https://commits.webkit.org/286506@main